--- a/LIgnorance/src/main/res/layout/adapter_background.xml
+++ b/LIgnorance/src/main/res/layout/adapter_background.xml
@@ -30,9 +30,9 @@
         android:layout_width="@dimen/width_30dp"
         android:layout_height="@dimen/width_30dp"
         android:layout_alignParentEnd="true"
-        android:saveEnabled="false"
         app:acb_checked="true"
         app:acb_circle_color="@color/color_pale"
+        app:acb_clickable="false"
         app:acb_stroke_color="@color/color_light_purple"
         app:acb_stroke_width="1dp" />
 </RelativeLayout>
