--- a/PhotoPicker/src/main/res/layout/__picker_activity_photo_pager.xml
+++ b/PhotoPicker/src/main/res/layout/__picker_activity_photo_pager.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/__picker_iwf_actionBarSize"
         android:background="?attr/colorPrimary"
-        app:mtb_title="@string/__picker_title" />
+        app:__picker_ptb_title="@string/__picker_title" />
 
     <FrameLayout
         android:id="@+id/container"
