--- a/PhotoPicker/src/main/res/layout/__picker_activity_photo_picker.xml
+++ b/PhotoPicker/src/main/res/layout/__picker_activity_photo_picker.xml
@@ -12,8 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/__picker_iwf_actionBarSize"
         android:background="@color/__picker_color_toolbar"
-        app:mtb_rightTxt="@string/__picker_done"
-        app:mtb_title="@string/__picker_title" />
+        app:__picker_ptb_rightTxt="@string/__picker_done"
+        app:__picker_ptb_title="@string/__picker_title" />
 
     <FrameLayout
         android:id="@+id/container"
