--- a/PhotoPicker/src/main/res/layout/__picker_item_photo.xml
+++ b/PhotoPicker/src/main/res/layout/__picker_item_photo.xml
@@ -23,7 +23,7 @@
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_alignParentRight="true"
-        android:background="@drawable/icon_delete"
+        android:background="@drawable/__picker_icon_delete"
         android:visibility="gone" />
 
     <ImageView
