--- a/PhotoPicker/src/main/res/layout/__picker_view_titlebar.xml
+++ b/PhotoPicker/src/main/res/layout/__picker_view_titlebar.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent"
         android:layout_centerVertical="true"
         android:scaleType="centerInside"
-        android:src="@drawable/arrow_back"
+        android:src="@drawable/__picker_arrow_back"
         tools:ignore="contentDescription" />
 
     <TextView
