--- a/PhotoPicker/src/main/res/values/__picker_styles.xml
+++ b/PhotoPicker/src/main/res/values/__picker_styles.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ResourceName">
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <style name="__picker_AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:colorPrimary" tools:targetApi="lollipop">#AA66CC</item>
@@ -7,10 +7,10 @@
     </style>
 
     <style name="__picker_mystyle" parent="android:Animation">
-        <item name="@android:windowEnterAnimation">@anim/dialog_enter</item>
-        //进入时的动画
-        <item name="@android:windowExitAnimation">@anim/dialog_exit</item>
-        //退出时的动画
+        <!--进入时的动画-->
+        <item name="@android:windowEnterAnimation">@anim/__picker_dialog_enter</item>
+        <!--退出时的动画-->
+        <item name="@android:windowExitAnimation">@anim/__picker_dialog_exit</item>
     </style>
 
 </resources>
